--- a/app/src/main/res/layout/activity_adressen_eingabe.xml
+++ b/app/src/main/res/layout/activity_adressen_eingabe.xml
@@ -22,6 +22,12 @@
         android:layout_height="wrap_content"
         android:text="restore" />
 
+    <Button
+        android:id="@+id/btn_clear_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="clear form" />
+
 
     <EditText
         android:id="@+id/et_adresseingabe_vorname"
